Trying to pass environment variable

--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -16,6 +16,9 @@ jobs:
           build: npm run build
           start: npm start
           record: true
+          env: true
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          AMAR_BASE_URL: ${{ secrets.AMAR_BASE_URL }}
+          CYPRESS_BASE_URL: 'http://localhost:5000/'
