--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -21,5 +21,5 @@ jobs:
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          AMAR_BASE_URL: ${{ secrets.AMAR_BASE_URL }}
+          CYPRESS_AMAR_BASE_URL: ${{ secrets.AMAR_BASE_URL }}
           CYPRESS_BASE_URL: ${{ secrets.AMAR_BASE_URL }}
