--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -1,6 +1,10 @@
 name: Cypress Tests
 
-on: [push, workflow_dispatch]
+on:
+  push:
+  workflow_dispatch:
+  repository_dispatch:
+    types: [cypress.trigger.dev]
 
 jobs:
   cypress-run:
